--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,11 +24,11 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Blog</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#about">Sobre</a>
-                    </li>
+                    </li> -->
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#team">Tecnologias</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contato</a>
